// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixture:es5 es5-input 1`] = `
"// index.ts
var value = 1;
console.log(value);
"
`;

exports[`fixture:es5 es5-input 2`] = `
"// index.js
var value = 1;
console.log(value);
"
`;

exports[`fixture:es5 es5-input 3`] = `
"// index.tsx
var value = 1;
console.log(value);
"
`;

exports[`fixture:es5 es5-input 4`] = `
"// index.jsx
var value = /* @__PURE__ */ React.createElement(\\"div\\", null);
console.log(value);
"
`;
